[tool.poetry]
name = "classifierpipeline"
version = "0.1.0"
description = "Some scripts to train model classifiers, logistic regression, nn model (tensorflow), and xgboost"
authors = ["fernando080 <fernanvulcano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7, <3.11"
pandas = "^2.2.3"
numpy = "^2.0.0"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
